--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,4 @@
-<!-- <div> -->
+<div>
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
@@ -19,4 +19,4 @@
             </div>
         </div>
     </div>
-<!-- </div> -->
+</div>
