--- a/templates/edit-todo.html
+++ b/templates/edit-todo.html
@@ -1,3 +1,4 @@
+<div class="container">
 <form name="todoForm" ng-submit="submitForm()" novalidate>
     <div class="form-group">
         <label>Title</label>
@@ -20,3 +21,4 @@
         <button type="submit" class="btn btn-primary">Save Changes</button>
     </div>
 </form>
+</div>
